revert: 운영 서버 최신화 revert (#569)
* Revert "feat: #546 비즈니스 로직 호출 메트릭 추가 (#549)"

This reverts commit 2d0c4bcffd292796ba11d9970e4964c2fefddbe3.

* Revert "refactor: #554 응답의 소수 데이터를 Float 타입으로 변경 (#559)"

This reverts commit ba1dd28fe785717fa53bd8133626555975ff7322.

* Revert "fix: #552 로그 설정 변경 (#556)"

This reverts commit 3e9e68abd5296b553037d489e2f02ecadb7ed3f7.

* Revert "fix: #552 로그 설정 변경 (#555)"

This reverts commit 4e234270c651166f57321b771336f9271f3c98f0.

* Revert "fix: #552 logback-spring.xml 설정 변경 (#553)"

This reverts commit f2cd679e625a8dd8cb5935fd5b6ebcbd54fabe4f.

* Revert "feat: #294 유저 상호 평가 api 추가 (#515)"

This reverts commit e364f4239c3537f1266877806a280de9986d9d89.

* Revert "fix: #550 입찰 관련 알림 수신자 변경 (#551)"

This reverts commit f8e34a9fcd3d6eb04045ce40bafbcbf81db27eda.

* Revert "refactor: #503 메시지 전송, 상위 입찰 생성과 알림 전송 이벤트 분리 (#525)"

This reverts commit 41d9755cfc766755a1cd3d48fa1ba2cbf09c16fe.

* Revert "feat: #537 채팅 가능 기간 관련 정책 제거 및 탈퇴한 사용자와 채팅이 불가능하도록 기능 추가 (#538)"

This reverts commit 6159d0b7af8dee9c680d3b14faa07ec8a976220e.

* Revert "feat: #534 카테고리와 직거래 지역 조회 api 호출시 메모리 캐시 적용 (#544)"

This reverts commit 240fe170ced9b384a2a1adfa173560b5c628bc9f.

* Revert "refactor: #530 warn, error 레벨 로그 포맷 변경 (#532)"

This reverts commit b5610b8bebf0753441cb9829b591a072947e061b.

* Revert "refactor: #539 경매 서비스 테스트에서 불필요한 레거시 테스트 제거 (#540)"

This reverts commit b69b433903ab71e31f1234efdc4c1722f0ca0117.

* Revert "refactor: #498 메시지 서비스 테스트 관련 리팩토링 (#502)"

This reverts commit c0708cb15f5abd4db8d4df64d6dda63c4bf1315b.

* Revert "fix: #519 쪽지 알림 시 쪽지 발신자의 프로필 사진이 전송되도록 수정 (#520)"

This reverts commit c5a024b9c159f33ad1cd1fc04d0d517d759359b0.

* Revert "feature: #505 요청과 응답의 내용을 출력하는 로그 추가 (#513)"

This reverts commit 0e14778b107da93a6b2aa30b19c6b9189c664c9d.

* Revert "test: #494 경매 관련 테스트 코드 리펙토링 (#504)"

This reverts commit e65000ab139fc7afb550b3c630b1a7b34a0b3c48.

* Revert "refactor: #